# napari-segment-everything

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_segment_everything/: interactive_launch.py  napari.yaml  napari_segment_everything.py  sam_helper.py  segment_everything.py  widgets.py
src/napari_segment_everything/_tests/: test_mobile_sam.py  test_widget.py
src/napari_segment_everything/minimalDetection/: detect_and_segment.py  minimalModel.py  visualizers.py
src/napari_segment_everything/minimalDetection/efficientvit/apps/data_provider/: base.py
src/napari_segment_everything/minimalDetection/efficientvit/apps/utils/: lr.py
src/napari_segment_everything/minimalDetection/efficientvit/clscore/data_provider/: imagenet.py
src/napari_segment_everything/minimalDetection/efficientvit/models/efficientvit/: cls.py  sam.py
src/napari_segment_everything/minimalDetection/mobilesamv2/: predictor.py
src/napari_segment_everything/minimalDetection/object_detection/ultralytics/: __init__.py
src/napari_segment_everything/minimalDetection/object_detection/ultralytics/nn/: autobackend.py  tasks.py
src/napari_segment_everything/minimalDetection/object_detection/ultralytics/prompt_mobilesamv2/: model.py  predict.py
src/napari_segment_everything/minimal_detection/: detect_and_segment.py  prompt_generator.py
src/napari_segment_everything/minimal_detection/efficientvit/apps/: setup.py
src/napari_segment_everything/minimal_detection/efficientvit/apps/trainer/: base.py  run_config.py
src/napari_segment_everything/minimal_detection/mobilesamv2/: __init__.py  build_sam.py
src/napari_segment_everything/minimal_detection/tinyvit/: tiny_vit.py
(+40 files in other folders)
