[metadata]
name = napari-segment-everything
version = 0.1.1
description = A Napari SAM plugin to segment everything in your image (not just some things)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/True-North-Intelligent-Algorithms/napari-segment-everything
author = Brian Northan
author_email = bnorthan@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    numpy
    torch
    torchvision
    segment-anything
    magicgui
    qtpy
    scikit-image
    napari

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-segment-everything = napari_segment_everything:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
